--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JakeSaintG</title>
+    <link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="wrap">
+        <header class="main-header">
+            <div class="container clearfix">
+                <h1 class="name"><a href="#">JakeSaintG</a></h1>
+                <ul class="main-nav">
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Social Media</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Goals</a></li>
+                    <li><a href="#">Random Link</a></li>
+                </ul>
+            </div>
+        </header><!--/.main-header-->   
+        <div class="clearfix">
+            <div class="banner">
+                <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake">
+                <h1 class="headline">Jake St. Germain</h1>
+                <span class="tagline">Registerded Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</span>
+            </div><!--/.banner-->
+        </div>
+
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+
+    </div>
+
+        <footer class="main-footer">
+            <span>&copy;1993 JakeSaintG</span>
+        </footer>
+
 </body>
 </html>
