Redid CSS for everything. Started from scratch on most of it. AAddeed the other pages

--- a/index.html
+++ b/index.html
@@ -8,47 +8,86 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="wrap">
-        <header class="main-header">
-            <div class="container clearfix">
-                <h1 class="name"><a href="#">JakeSaintG</a></h1>
-                <ul class="main-nav">
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="#">Social Media</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Goals</a></li>
-                    <li><a href="#">Random Link</a></li>
-                </ul>
-            </div>
-        </header><!--/.main-header-->   
-        <div class="clearfix">
-            <div class="banner">
-                <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake">
-                <h1 class="headline">Jake St. Germain</h1>
-                <span class="tagline">Registerded Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</span>
-            </div><!--/.banner-->
-        </div>
-
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-
+    <div class="sidebar">
+        <div class="main-nav">
+            <ul class="mobile-nav">
+                <li class="m-nav">
+                    <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake">
+                </li>
+                <li class="m-nav name">
+                    <a href="#">JakeSaintG</a>
+                </li>
+                <li class="m-nav arrow trigger">
+                    <a href="#">&lArr;</a>
+                </li>
+            </ul>
+            <ul class="other-nav">
+                <li>
+                    <a class="activelink nav" href="index.html">About Me</a>
+                </li>
+                <li>
+                    <a class="nav" href="skills.html">Skills</a>
+                </li>
+                <li >
+                    <a class="nav" href="projects.html">Projects</a>
+                </li>
+                <li>
+                    <a class="nav" href="socialmedia.html">Social Media</a>
+                </li>
+                <li>
+                    <a class="nav" href="blog.html">Blog</a>
+                </li>
+                <li>
+                    <a class="nav" href="randomlink.html">Random Link</a>
+                </li>
+                <li class="copy nav">
+                    &#169;1993 JakeSaintG
+                </li>
+            </ul>
+        </div> 
     </div>
-
-    <footer class="main-footer">
-        <span>&copy;1993 JakeSaintG</span>
-    </footer>
+    <div class="content"> 
+        <div class="banner">
+            <h1 class="headline">Jake St. Germain</h1>
+            <span class="tagline">Registered Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</span>
+        </div><!--/.banner-->
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+        <p>content</p>
+    </div>
 
 </body>
 </html>
