added animation, more content, fixed navigation in mobile

--- a/projects.html
+++ b/projects.html
@@ -18,11 +18,11 @@
                 <li class="m-nav name">
                     <a href="#">JakeSaintG</a>
                 </li>
-                <li class="m-nav arrow trigger">
-                    <a href="#">&lArr;</a>
+                <li class="m-nav menuButton">
+                    <a onclick="showHide()">&#9776</a>
                 </li>
             </ul>
-            <ul class="other-nav">
+            <ul class="other-nav" id="myOthernav">
                 <li>
                     <a class="nav" href="index.html">About Me</a>
                 </li>
@@ -75,7 +75,6 @@
             </li>
         </ul>
     </div>
-    
-
+    <script src="js/menu.js"></script>
 </body>
 </html>
