--- a/socialmedia.html
+++ b/socialmedia.html
@@ -18,11 +18,11 @@
                 <li class="m-nav name">
                     <a href="#">JakeSaintG</a>
                 </li>
-                <li class="m-nav arrow trigger">
-                    <a href="#">&lArr;</a>
+                <li class="m-nav menuButton">
+                    <a onclick="showHide()">&#9776</a>
                 </li>
             </ul>
-            <ul class="other-nav">
+            <ul class="other-nav" id="myOthernav">
                 <li>
                     <a class="nav" href="index.html">About Me</a>
                 </li>
@@ -50,45 +50,33 @@
     <div class="content"> 
         <div class="banner">
             <h1 class="headline">Social Media</h1>
-            <span class="tagline">Registered Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</span>
+            <span class="tagline">Follow, subscribe, like, etc. I'm here for a good, wholesome time.</span>
         </div><!--/.banner-->
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
+        <a href="https://www.tiktok.com/@jakesaintg" class="big tiktok">
+            <h2>TikTok</h2>
+            <p>Here is where I make silly videos as a stress relief! They are mostly centered around nursing but I do have a few that focus on my other interests. I try not to take it too seriously but I certainly have fun making the videos and interacting with the community!</p>
+        </a>
+        <a href="https://www.instagram.com/jakesaintg/" class="big instagram">
+            <h2>Instagram</h2>
+            <p>Largely pictures of my cats.</p>
+        </a>
+        <a href="https://github.com/jakesaintg/" class="big github">
+            <h2>GitHub</h2>
+            <p>I try to stay busy and keep my skills up-to-date. Some projects are more complete than others but I have learned from each and every one!</p>
+        </a>
+        <a href="https://linktr.ee/JakeSaintG" class="small linktree">
+            <h2>LinkTree</h2>
+        </a>
+        <a href="https://old.reddit.com/user/JakeSaintG/" class="small reddit">
+            <h2>Reddit</h2>
+        </a>
+        <a href="https://twitter.com/jakesaintg" class="small twitter">
+            <h2>Twitter</h2>
+        </a>
+        <a href="#" class="small placeholder">
+            <h2>Placeholder!</h2>
+        </a>
     </div>
-
+    <script src="js/menu.js"></script>
 </body>
 </html>
