added content to About Me and changed some styling

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/blog.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="sidebar">
@@ -50,7 +51,7 @@
     <div class="content"> 
         <div class="banner">
             <h1 class="headline">Blog</h1>
-            <span class="tagline">Here are some of my thoughts! I would love to hear yours as well!</span>
+            <p class="tagline">Here are some of my thoughts! I would love to hear yours as well!</p>
         </div><!--/.banner-->
         <p>content</p>
         <p>content</p>
