--- a/randomlink.html
+++ b/randomlink.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/randomlink.css">
-    <link rel="stylesheet" href="css/brad.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="sidebar">
@@ -50,13 +50,13 @@
     </div>
     <div class="content"> 
         <div class="banner">
-            <marquee class="headline brad">Random Link</marquee>
-            <span class="tagline">ALL possible links are wholesome, educational, or charitable. None of
-                them will link to opinions or false information. No possible link will harm your computer and all are reputable sites. ENJOY THE RNG!</span>
-                <p>inspired by Geocities-era Pages (link to Brad.css style sheet)</p>
+            <h1 class="headline brad">Random Link</h1>
+            <p class="tagline">ALL possible links are wholesome, educational, or charitable. None of
+                them will link to opinions or false information. No possible link will harm your computer and all are reputable sites. ENJOY THE RNG!</p>
         </div><!--/.banner-->
-        <button>content</button>
+        <button value="random link!" onClick="randomlinks()">content</button>
     </div>
     <script src="js/menu.js"></script>
+    <script src="js/randomlink.js"></script>
 </body>
 </html>
