--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/skills.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="sidebar">
@@ -50,7 +51,7 @@
     <div class="content"> 
         <div class="banner">
             <h1 class="headline">This Page is under construction!</h1>
-            <span class="tagline">Just fill your mind with the sounds of hammers, drills, and jack hammers. That's of what it's like building websites.</span>
+            <p class="tagline">Just fill your mind with the sounds of hammers, drills, and jack hammers. That's of what it's like building websites.</p>
         </div><!--/.banner-->
         <p>content</p>
         <p>content</p>
