--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/project.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="sidebar">
@@ -50,7 +51,7 @@
     <div class="content"> 
         <div class="banner">
             <h1 class="headline">Jake St. Germain</h1>
-            <span class="tagline">Registered Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</span>
+            <p class="tagline">Registered Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</p>
         </div><!--/.banner-->
         <ul class="box">
             <li class="projects sadlibs">
