--- a/socialmedia.html
+++ b/socialmedia.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/socialmedia.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="sidebar">
@@ -50,7 +51,7 @@
     <div class="content"> 
         <div class="banner">
             <h1 class="headline">Social Media</h1>
-            <span class="tagline">Follow, subscribe, like, etc. I'm here for a good, wholesome time.</span>
+            <p class="tagline">Follow, subscribe, like, etc. I'm here for a good, wholesome time.</p>
         </div><!--/.banner-->
         <a href="https://www.tiktok.com/@jakesaintg" class="big tiktok">
             <h2>TikTok</h2>
