--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="main-nav">
+        <nav role =”navigation” aria-label =”pagenav”>
             <ul class="mobile-nav">
                 <li class="m-nav">
                     <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake">
@@ -43,16 +43,16 @@
                     <a class="nav" href="randomlink.html">Random Link</a>
                 </li>
                 <li class="copy nav">
-                    &#169;1993 JakeSaintG
+                    <footer role = “contentinfo”>&#169;1993 JakeSaintG</footer>
                 </li>
             </ul>
-        </div> 
+        <nav> 
     </div>
-    <div class="content"> 
-        <div class="banner">
+    <main role =”main”> 
+        <header role = “banner”>
             <h1 class="headline">This Page is under construction!</h1>
             <p class="tagline">Just fill your mind with the sounds of hammers, drills, and jack hammers. That's of what it's like building websites.</p>
-        </div><!--/.banner-->
+        </header><!--/.banner-->
         <p>content</p>
         <p>content</p>
         <p>content</p>
@@ -89,7 +89,7 @@
         <p>content</p>
         <p>content</p>
         <p>content</p>
-    </div>
+    </main>
     <script src="js/menu.js"></script>
 </body>
 </html>
