--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="main-nav">
+        <nav role =”navigation” aria-label =”pagenav”>
             <ul class="mobile-nav">
                 <li class="m-nav">
                     <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake">
@@ -43,16 +43,16 @@
                     <a class="nav" href="randomlink.html">Random Link</a>
                 </li>
                 <li class="copy nav">
-                    &#169;1993 JakeSaintG
+                    <footer role = “contentinfo”>&#169;1993 JakeSaintG</footer>
                 </li>
             </ul>
-        </div> 
+        <nav> 
     </div>
-    <div class="content"> 
-        <div class="banner">
+    <main role =”main”> 
+        <header role = “banner”>
             <h1 class="headline">Blog</h1>
             <p class="tagline">Here are some of my thoughts! I would love to hear yours as well!</p>
-        </div><!--/.banner-->
+        </header><!--/.banner-->
         <p>content</p>
         <p>content</p>
         <p>content</p>
@@ -89,7 +89,7 @@
         <p>content</p>
         <p>content</p>
         <p>content</p>
-    </div>
+    </main>
     <script src="js/menu.js"></script>
 </body>
 </html>
