--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
         <nav role =”navigation” aria-label =”pagenav”>
             <ul class="mobile-nav">
                 <li class="m-nav">
-                    <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake">
+                    <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake St. Germain Professional Headshot">
                 </li>
                 <li class="m-nav name">
                     <a href="#">JakeSaintG</a>
