--- a/socialmedia.html
+++ b/socialmedia.html
@@ -14,7 +14,7 @@
         <nav role =”navigation” aria-label =”pagenav”>
             <ul class="mobile-nav">
                 <li class="m-nav">
-                    <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake">
+                    <img class="logo" src="imgs/Me_Placeholder.jpg" alt="Jake St. Germain Professional Headshot">
                 </li>
                 <li class="m-nav name">
                     <a href="#">JakeSaintG</a>
@@ -54,29 +54,51 @@
             <p class="tagline">Follow, subscribe, like, etc. I'm here for a good, wholesome time.</p>
         </header><!--/.banner-->
         <a href="https://www.tiktok.com/@jakesaintg" class="big tiktok">
-            <h2>TikTok</h2>
-            <p>Here is where I make silly videos as a stress relief! They are mostly centered around nursing but I do have a few that focus on my other interests. I try not to take it too seriously but I certainly have fun making the videos and interacting with the community!</p>
-        </a>
-        <a href="https://www.instagram.com/jakesaintg/" class="big instagram">
-            <h2>Instagram</h2>
-            <p>Largely pictures of my cats.</p>
+            <span class="sprite" alt="TikTok Logo"></span> 
+            <!-- class="sprite" src="imgs/socialspritesheet.png" alt="TikTok Logo"> -->
+            <div class="text">
+                <h2 class="head">TikTok</h2>
+                <p>Here is where I make silly videos as a stress relief! They are mostly centered around nursing but I do have a few that focus
+                on my other interests. I try not to take it too seriously but I certainly have fun making the videos and interacting with the community!
+                </p>
+            </div>
         </a>
         <a href="https://github.com/jakesaintg/" class="big github">
-            <h2>GitHub</h2>
-            <p>I try to stay busy and keep my skills up-to-date. Some projects are more complete than others but I have learned from each and every one!</p>
+            <span class="sprite" alt="GitHub Logo"></span>
+            <div class="text">
+                <h2 class="head">GitHub</h2>
+                <p>I try to stay busy and keep my skills up-to-date. Some projects are more complete than others but I have learned from each and every one!</p>
+            </div>
         </a>
-        <a href="https://linktr.ee/JakeSaintG" class="small linktree">
-            <h2>LinkTree</h2>
+        <a href="https://github.com/jakesaintg/" class="big linkedin">
+            <span class="sprite" alt="Linkedin Logo"></span>
+            <div class="text">
+                <h2 class="head">Linkedin</h2>
+                <p>Professional Professional Professional Professional Professional Professional Professional
+                     Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional
+                     Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional
+                     Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional
+                     Professional Professional Professional Professional Professional Professional Professional Professional</p>
+            </div>
         </a>
-        <a href="https://old.reddit.com/user/JakeSaintG/" class="small reddit">
-            <h2>Reddit</h2>
-        </a>
-        <a href="https://twitter.com/jakesaintg" class="small twitter">
-            <h2>Twitter</h2>
-        </a>
-        <a href="#" class="small placeholder">
-            <h2>Placeholder!</h2>
-        </a>
+        <div class="smallsocial">
+            <a href="https://linktr.ee/JakeSaintG" class="small linktree">
+                <span class="smallsprite" alt="Linktree Logo"></span>
+                <h4>LinkTree</h2>
+            </a>
+            <a href="https://old.reddit.com/user/JakeSaintG/" class="small reddit">
+                <span class="smallsprite" alt="Reddit Logo"></span>
+                <h4>Reddit</h2>
+            </a>
+            <a href="https://twitter.com/jakesaintg" class="small twitter">
+                <span class="smallsprite" alt="Twitter Logo"></span>
+                <h4>Twitter</h2>
+            </a>
+            <a href="https://www.instagram.com/jakesaintg/" class="small instagram">
+                <span class="smallsprite" alt="Instagram Logo"></span>
+                <h4>Instagram</h2>
+            </a>
+        </div>
     </main>
     <script src="js/menu.js"></script>
 </body>
