added content to skils page

--- a/skills.html
+++ b/skills.html
@@ -50,45 +50,49 @@
     </div>
     <main role =”main”> 
         <header role = “banner”>
-            <h1 class="headline">This Page is under construction!</h1>
-            <p class="tagline">Just fill your mind with the sounds of hammers, drills, and jack hammers. That's of what it's like building websites.</p>
+            <h1 class="headline">Skills</h1>
+            <p class="tagline">Here are couple of skills that I have picked up over the years!</p>
         </header><!--/.banner-->
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
+        <a href="#" class="big nurse">
+            <span class="sprite" alt="Nurse symbol"></span> 
+            <div class="text">
+                <h2 class="head">ICU Nurse</h2>
+                <p>Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                </p>
+            </div>
+        </a>
+        <a href="#" class="big dev">
+            <span class="sprite" alt="Html5 and CSS Logo"></span>
+            <div class="text">
+                <h2 class="head">Front End Web</br>Development</h2>
+                <p>Always learning! Still working to be the best developer that I can.Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                </p>
+            </div>
+        </a>
+        <a href="#" class="big blender">
+            <span class="sprite" alt="Blender Logo"></span>
+            <div class="text">
+                <h2 class="head">Blender</h2>
+                <p>Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                </p>
+            </div>
+        </a>
     </main>
     <script src="js/menu.js"></script>
 </body>
