added inspirations and fixed link text color

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>            
                 </div>
-
                 <div class="col goals">
                     <div class="text">
                         <h2 class="head">Goals</h2>
@@ -81,11 +80,7 @@
                             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </div>
-
-
             </div>
-
-
             <div class="col experience">
                 <img class="aboutMeBodyImg" src="imgs/NortonChildren.jpg" alt="Norton Children's Hospital"> 
                 <div class="text">
@@ -95,26 +90,41 @@
                         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>          
             </div>
-
-
             <div class="col awards">
                 <div class="text">
                     <h2 class="head">Awards</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>         
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>        
                 </div>
             </div>
-
-
-
             <div class="col inspirations">
-                <div class="text">
-                    <h2 class="head">Inspirations</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2>Inspirations</h2>
+                <div class="insp_icon">
+                    <a href="#" class="rick">
+                        <img src="imgs/rick.jpg" alt="Photo of Richard St. Germain">
+                        <h4>Richard St. Germain</h4>
+                    </a>
+                    <a href="https://github.com/jacobkastensmidt" class="jpp">
+                        <img src="imgs/jpp.jpg" alt="Photo of Jacob Kastensmidt">
+                        <h4>Jacob Kastensmidt</h4>
+                    </a>
+                    <a href="https://github.com/bradcypert" class="brad">
+                        <img src="imgs/brad.jpg" alt="Photo of Brad Cypert">
+                        <h4> Brad Cypert</h4>
+                    </a>
+                    <a href="https://github.com/ethdmill" class="ethan">
+                        <img src="imgs/ethan.jpg" alt="Photo of Ethan Miller">
+                        <h4>Ethan Miller</h4>
+                    </a>
+                    <a href="https://github.com/mattbalmer" class="matt">
+                        <img src="imgs/matt.jpg" alt="Photo of Matt Balmer">
+                        <h4>Matt Balmer</h4>
+                    </a>
+                    <a href="https://www.linkedin.com/in/christine-seaman-1ab412a4/" class="christine">
+                        <img src="imgs/christine.jpg" alt="Photo of wife Christine St. Germain">
+                        <h4>Christine St. Germain</h4>
+                    </a>
                 </div>
             </div>
         </div>
