--- a/blog.html
+++ b/blog.html
@@ -53,42 +53,88 @@
             <h1 class="headline">Blog</h1>
             <p class="tagline">Here are some of my thoughts! I would love to hear yours as well!</p>
         </header><!--/.banner-->
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
+        <button>Submit Post</button>
+        <form class="post_full" action="">
+            <div class="post_head">
+                <label for="title">Post Title</label>
+                <input type="text" id="posttitle" name="title">
+                <label for="post_author">Post Author</label>
+                <input type="text" id="post_author" name="post_author">
+            </div>
+            <div class="post_content">
+                <label for="post_content">Post:</label>
+                <textarea id="post_content" name="post_content"> </textarea>
+                <input type="submit" value="Submit">
+            </div>
+        </form>
+        <article class="post_full">
+            <div class="post_head">
+                <h1 class="post_title">Post Title</h1>
+                <div class="post_details">
+                    <h3 class="post_author">Post Author</h3>
+                    <h3 class="post_date">Post Date</h3>
+                </div>
+            </div>
+            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+            </p>
+        </article>
+        <article class="post_full">
+            <div class="post_head">
+                <h1 class="post_title">Post Title</h1>
+                <div class="post_details">
+                    <h3 class="post_author">Post Author</h3>
+                    <h3 class="post_date">Post Date</h3>
+                </div>
+            </div>
+            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+            </p>
+        </article>
+        <article class="post_full">
+            <div class="post_head">
+                <h1 class="post_title">Post Title</h1>
+                <div class="post_details">
+                    <h3 class="post_author">Post Author</h3>
+                    <h3 class="post_date">Post Date</h3>
+                </div>
+            </div>
+            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+            </p>
+        </article>
+        <article class="post_full">
+            <div class="post_head">
+                <h1 class="post_title">Post Title</h1>
+                <div class="post_details">
+                    <h3 class="post_author">Post Author</h3>
+                    <h3 class="post_date">Post Date</h3>
+                </div>
+            </div>
+            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+            </p>
+        </article>
     </main>
     <script src="js/menu.js"></script>
 </body>
